[gd_scene load_steps=3 format=3 uid="uid://dqg74m7o6k3lf"]

[ext_resource type="Theme" uid="uid://c0figasdpxdvo" path="res://assets/text.tres" id="1_cq6wb"]
[ext_resource type="Script" uid="uid://dae2hpvlxd8t5" path="res://maps/map.gd" id="2_i73qr"]

[node name="Map" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_cq6wb")
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("2_i73qr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="name" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_cq6wb")
theme_override_font_sizes/font_size = 60
text = "Mod name"
vertical_alignment = 1

[node name="authors" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_cq6wb")
theme_override_font_sizes/font_size = 20
text = "Author"
vertical_alignment = 1

[node name="description" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_cq6wb")
theme_override_font_sizes/font_size = 30
text = "Mod description

"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="install" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = " Install "

[node name="uninstall" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = " Uninstall "

[node name="disable" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = " Disable "

[node name="enable" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = " Enable "

[connection signal="button_up" from="VBoxContainer/HBoxContainer/install" to="." method="_on_install_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/uninstall" to="." method="_on_uninstall_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/disable" to="." method="_on_disable_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/enable" to="." method="_on_enable_button_up"]
